
------------------------------------------------------------------------
r729 | gaser | 2015-09-14 15:44:30

M       CHANGES.txt
M       cg_vbm_batch.sh
M       cg_vbm_tools.m
M       cg_vbm_write.m
M       vbm_vol_groupwise_ls.m
M       vbm_vol_sanlm.m
M       vbm_vol_series_align.m

(1) Removed vbm-dir option in cg_vbm_batch.sh and updated help test.
(2) Some cosmetic changes to cg_vbm_write.m, vbm_vol_sanlm.m
    vbm_vol_groupwise_ls.m, and cg_vbm_tools.m
------------------------------------------------------------------------
r730 | gaser | 2015-09-16 11:34:37

M       CHANGES.txt
M       cg_vbm_longitudinal.m
M       cg_vbm_longitudinal_multi.m
M       cg_vbm_longitudinal_multi_run.m
M       vbm_vol_groupwise_ls.m
M       vbm_vol_series_align.m

Reorganized and updated longitudinal batch that caused problems with 
column cellstr. Thanks to Yang Ding for pointing to that issue. 

------------------------------------------------------------------------
r731 | gaser | 2015-09-16 17:18:08

M       CHANGES.txt
M       cg_vbm_longitudinal.m
M       cg_vbm_longitudinal_multi.m
M       cg_vbm_longitudinal_multi_run.m
M       html/vbm12.html
M       vbm_vol_groupwise_ls.m
M       vbm_vol_series_align.m

Reorganized and updated longitudinal batch that caused problems with 
column cellstr. Thanks to Yang Ding for pointing to that issue. 

------------------------------------------------------------------------
r732 | gaser | 2015-09-17 10:01:45

M       CHANGES.txt
M       html/vbm12.html
M       vbm_vol_groupwise_ls.m

Replace noise estimation of NaN by average value in vbm_vol_groupwise_ls.m.

------------------------------------------------------------------------
r733 | gaser | 2015-09-17 13:33:53

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm_io_writenii.m

Corrected mat0 in rigid output images.


------------------------------------------------------------------------
r734 | dahnke | 2015-09-21 07:57:05