@@ -44,17 +44,6 @@ if ~isfield(job.output,'WMH')
                            'mod',0, ...
                            'dartel',cg_vbm_get_defaults('output.WMH.dartel'));
 end
-if ~isfield(job.output,'CSF')
-  job.output.CSF  = struct('native',cg_vbm_get_defaults('output.CSF.native'), ...
-                           'warped',cg_vbm_get_defaults('output.CSF.warped'), ...
-                           'mod',cg_vbm_get_defaults('output.CSF.mod'), ...
-                           'dartel',cg_vbm_get_defaults('output.CSF.dartel'));
-end
-if ~isfield(job.output,'label')
-  job.output.label  = struct('native',cg_vbm_get_defaults('output.label.native'), ...
-                             'warped',cg_vbm_get_defaults('output.label.warped'), ...
-                             'dartel',cg_vbm_get_defaults('output.label.dartel'));
-end
 FN = {'INV','atlas','debug','WMHC','NCstr','WMHCstr','LASstr','BVCstr','gcutstr','cleanupstr','mrf','verb','vox'};
 for fni=1:numel(FN)
   if ~isfield(job.extopts,FN{fni})
@@ -1869,7 +1858,7 @@ if vbm.print
   str3 = struct('name', '\bfVolumes:','value',sprintf('%4s %4s %4s %4s%s','CSF','GM','WM','WMH')); 
   str3 = [str3 struct('name', ' Absolute volume:','value',sprintf('%4.0f %4.0f %4.0f %4.0f cm%s', ...
           qa.SM.vol_abs_CGW(1),qa.SM.vol_abs_CGW(2),qa.SM.vol_abs_CGW(3),qa.SM.vol_abs_CGW(4),char(179)))];
-  str3 = [str3 struct('name', ' Relative volume:','value',sprintf('%4.0f %4.0f %4.0f %4.0f %%', ...
+  str3 = [str3 struct('name', ' Relative volume:','value',sprintf('%4.1f %4.1f %4.1f %4.1f %%', ...
           qa.SM.vol_rel_CGW(1)*100,qa.SM.vol_rel_CGW(2)*100,qa.SM.vol_rel_CGW(3)*100,qa.SM.vol_rel_CGW(4)*100))];
 %  str3 = [str3 struct('name', ' Absolute volume:','value',sprintf('%s %s %s %s cm%s', ...
 %          mark2str2(qam.SM.vol_rel_CGW(1),'%4.0f',qa.SM.vol_abs_CGW(1)),...
@@ -1889,9 +1878,11 @@ if vbm.print
             qam.QM.vbm_expect(1),qa.QM.vbm_expect(1)*100))))]; 
   end
   if isfield(qa.SM,'dist_thickness') && ~isempty(qa.SM.dist_thickness)
+%    str3 = [str3 struct('name', '\bfThickness:','value',sprintf('%s%s%s mm', ...
+%          mark2str2(qam.SM.dist_thickness{1}(1),'%0.2f',qa.SM.dist_thickness{1}(1)),177, ...
+%          mark2str2(qam.SM.dist_thickness{1}(2),'%0.2f',qa.SM.dist_thickness{1}(2))))];
     str3 = [str3 struct('name', '\bfThickness:','value',sprintf('%s%s%s mm', ...
-          mark2str2(qam.SM.dist_thickness{1}(1),'%0.2f',qa.SM.dist_thickness{1}(1)),177, ...
-          mark2str2(qam.SM.dist_thickness{1}(2),'%0.2f',qa.SM.dist_thickness{1}(2))))];
+           qa.SM.dist_thickness{1}(1),qa.SM.dist_thickness{1}(2)))];
   end
   if numel(vbm_warnings)>0
     str3 = [str3 struct('name', '','value','')]; 
